docs/tests/nameres/expressions/valid/Matrix.src
// Valid

let mat<u64, 1, 1> m1 = { {1} };
let mat<u64, 2, 2> m2 = { {1, 2}, {3, 4} };