docs/tests/nameres/expressions/invalid/MatrixVarSize.src
// Invalid

let mat<u32, x, y> mat1; 